objects/SFMC_Open__c/SFMC_Open__c.object-meta.xml
<CustomObject>
    <label>Open (SFMC)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opens (SFMC)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>