objects/SFMC_Open__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <label>Activity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>