objects/SFMC_Open__c/fields/Subscriber_SFMC__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_SFMC__c</fullName>
    <label>Subscriber (SFMC)</label>
    <referenceTo>SFMC_Subscriber__c</referenceTo>
    <relationshipLabel>Opens (SFMC)</relationshipLabel>
    <relationshipName>Opens_SFMC</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>